made the input text rather than number

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <label for="movieName">Movie Name:</label>
         <input type="text" id="movieName" name="movieName"><br>
         <label for="movieRating">Movie's Rating:</label>
-        <input type="number" id="movieRating" name="movieRating"><br>
+        <input type="text" id="movieRating" name="movieRating"><br>
         <label for="movieYear">Movie's Year:</label>
-        <input type="number" id="movieYear" name="movieYear"><br>
+        <input type="text" id="movieYear" name="movieYear"><br>
         <button id="enter" type="button">Add Movie</button>
         <button id="show" type="button">Show Movies</button>
         <ul id="movieList"></ul>
 
         <script src="Movie.js"></script>
         <script src="index.js"></script>
-        
+
     </body>
 </html>
